<resources>
    <string name="chest_exercise">Chest Exercise</string>
    <string name="app_name">GymBabePro</string>
    <string name="benchpress_title">
        1. Bench Press
    </string>
    <string name="benchpress_string">
        Its popular to hate on the bench press these days, but its one of the most popular lifts in the gym for a reason.
        For one, the standard barbell bench allows you to move the most weight.
        Its also an easier lift to control than pressing with heavy dumbbells.
        The exercise is also relatively easy to spot—so dont be afraid to ask for one!
        The bench press also responds well to classic protocols like 5x5 for muscle and strength, or even 10x10, aka German Volume Training, for pure mass.
        If you want to get serious, there are systematic bench press programs like Bench 300 to help you chase a big number.
    </string>
    <string name="dumbell_title">
        2. Dumb Bell
    </string>
    <string name="dumbbell_string">
        Whether dumbbell or barbell presses are better for growth is an age-old weight-room debate.
        Luckily, you can do both! But theres little doubt that the dumbbell variation has more versatility throughout the beginning, middle, and end of a chest workout.
        Some other big plusses for dumbbells:
        Each sides musculature must work independently, creating more balanced strength and size.
        Dumbbells also allow a longer range of motion, which some studies say can lead to muscle growth.
        Plus, you can more easily tweak your grip to create variety and a new stimulus on chest day.
    </string>
    <string name="incline_title">
        3. Incline Bench Press
    </string>
    <string name="incline_string">
        Not only is the incline bench press a classic way to build the upper chest, many lifters find them to be a more comfortable "main lift" for the shoulders than flat benching.
        Its great with a barbell or multi-grip bar, but maybe be even better with dumbbells, since you can customize your grip to increase focus on the upper pecs.
Pro tip: Many benches are fixed at a very steep angle, which EMG results have shown works the front delts as much as the chest. If possible, go for a lower incline, such as 30 degrees, to focus squarely on the upper pecs.
The common thinking on decline is that its for lower chest only. And while it is good for that, all-time greats, like six-time Mr. Olympia Dorian Yates in his 6-Week Blood and Guts program, favor it because it hits the entire chest and allows them to lift heavier and more comfortably than the flat bench.
If your gym has a comfortable decline press machine, like a plate-loaded hammer strength machine, use it. Along with the traditional double-arm press, you can sit sideways and press across your body one arm at a time. This unilateral chest move emphasizes shoulder adduction, one of the primary actions of the pec major.
    </string>
    <string name="fw_title">
        4. Free-Weight Pressing
    </string>
    <string name="fw_string" translatable="false">
        Free-weight pressing moves on a flat bench are great, but machine press and cable press variations have some unique benefits. For one, its easier to slow down the repetition, both in the concentric and eccentric phases. Stack-loaded machines are also great for quickly doing dropsets.
Feel like a step down from free weights? It shouldnt.EMG research demonstrates that the machine bench press recruits the shoulders far less than free-weight variations. This allows you to really target your pecs.
    </string>
    <string name="armstitle">
        Arms Exercise
    </string>
    <string name="ac_title">
        1. Arms Circle
    </string>
    <string name="ac_string">
       Strengthen your shoulders and arms with simple, yet effective circular motions. You can do this exercise in a matter of minutes without any equipment.
    </string>
    <string name="td_title">
        2. Tricep Dips
    </string>
    <string name="td_string">
       Build your triceps by using only your body weight. While you can do this on the floor, opting for a couch, bench, chair, or sturdy coffee table also works as a great base.
    </string>
    <string name="bc_title">
        3. Bicep curls to push press
    </string>
    <string name="bc_string">
      Although you can use weights for this exercise, it can be just as effective with household items like a can of food or bottle of laundry detergent. This exercise primarily focuses on your bicep muscles but also works your deltoids and core.
    </string>
    <string name="ps_title">
        4. Plank sidewalk
    </string>
    <string name="ps_string">
   Tone your abdominal muscles as you strengthen your arms. Put a spin on a traditional plank by moving side to side.
    </string>
    <string name="kp_title">
        5. Kickboxing punches
    </string>
    <string name="kp_string">
   If you’ve ever entered the ring or a cardio kickboxing class, you know that throwing punches burns a lot of calories. They also help tone and strengthen your arms and upper back.
    </string>
    <string name="fr_title">
        3. Front Raise
    </string>
    <string name="fr_string">
    You can use either a weight plate or barbell for this shoulder workout, which targets the anterior delts. No matter what you decide to use, prepare for a seriously intense time with one of the best shoulder exercises for mass. Don’t max out on the weight, as it will quickly turn healthy pain into unhealthy injury.
    </string>
    <string name="ubtitle">
       Upper Back Exercise
    </string>
    <string name="br_title">
        1. Bent-over row
    </string>
    <string name="br_string">
  Many people get into the habit of letting the bench press dominate their workout, but concentrating on your pecs at the expense of your back can lead to a muscle imbalance that not only looks rubbish, but also increases your risk of injury. The bent-over row works the opposite muscle group, the upper back (traps, lats, rhomboids and rear deltoids), as well as your biceps and abs, which help keep your torso stable.
Start with your core braced, your back straight and your shoulder blades retracted. Bend your knees slightly and lean forwards from the hips. Grip the bar with your hands just wider than shoulder-width apart, letting the bar hang at knee level. Pull the bar to your sternum, retracting your shoulder blades to allow the bar to come up to your chest, then lower slowly back to the start.
Don’t shrug your shoulders and round your back if you’re struggling with the weight – this takes the emphasis away from the target muscles. It’s far better to switch to a lighter weight and maintain correct form.
    </string>
    <string name="or_title">
        2. One-arm row
    </string>
    <string name="or_string">
   Working one arm at a time encourages balanced growth, lessening the risk of injury. Rest your left knee and hand on a bench, and hold a dumbbell in your right hand close to the floor. Keeping your back straight, use your back muscles and biceps to row the weight up to your side, leading with your elbow. Normally you’ll complete all your reps with one arm, then repeat on the other side.
    </string>
    <string name="lbtitle">
       Lower Back Exercise
    </string>
    <string name="dl_title">
        1. Deadlift
    </string>
    <string name="dl_string">
 Deadlifts are a great compound exercise for building strength in your glutes, quads, hamstrings, lats, and traps. However, they do also help to build strength in the lower back in a small way. When performing this exercise correctly, you should have an isometric hold through your back to keep your torso straight throughout the move. You’ll also feel a concentric contraction as you reach a vertical position. However, don’t be tempted to cheat this move and make it do more by pulling with your back or over-extending at the top. It’s a hip driving movement, and doing anything other than that can cause injury and will have you walking like you’re a hundred-years-old.
    </string>
    <string name="ks_title">
        2. Kettlebell Swing
    </string>
    <string name="ks_string">
        Similar to the deadlifts, kettlebell swings are a hip-hinging exercise. You’ll use your lower back muscles to stabilize your upper body throughout the swing, and you’ll achieve a small concentric contraction at the top of the move. Again, as with the deadlift, don’t shift to using your back to swing; otherwise, you will end up injured. The great thing about this conditioning exercise is that you can build endurance and athleticism by aiming for longer sets.
    </string>
    <string name="hp_title">
        3. Hyperextension
    </string>
    <string name="hp_string">
    Hyperextensions get a bad wrap because of the name — hyper sounds so aggressive. Yet this exercise is excellent for strengthening your lower back. Not only do you get a full flex, but you also get a concentric contraction of your muscles, and you can easily add weights to increase your outcomes. The key to performing the move without adding undue stress to your lower back is to lift your body to a neutral position, not a fully extended one. You still get engagement through the full range of motion, without unnecessary risk. Take your extension to another level by choosing dumbbells as your weights, and adding a row at the top to include your upper back muscles in the workout.
    </string>
    <string name="abstitle">
        Abs Exercise
    </string>
    <string name="dc_title">
        1. Dumbbell crunch
    </string>
    <string name="dc_string">
    Reps 10 Rest 10sec
    Lie on your back, holding a dumbbell or weight plate across your chest in both hands. Raise your torso, then lower it, maintaining tension in your uppers abs throughout.
    </string>
    <string name="tc_title">
        2. Tuck and crunch
    </string>
    <string name="tc_string">
    Reps 15 Rest 10sec
    Lie down with your hands by your head and your legs raised with your knees bent at a 90° angle. Simultaneously raise your torso and draw your knees towards your chest. Keep your fingers by your temples throughout and initiate each rep smoothly without jerking your torso up. Don’t let your feet touch the floor between reps.
    </string>
    <string name="mv_title">
        3. Modified V-sit
    </string>
    <string name="fs_string">
    Sets 4 Reps 6-8 Rest 2min
    Take a “clean” grip, hands slightly wider than shoulder-width apart. Position the bar on your collarbone and drive your elbows upwards. Un-rack the bar, and take two steps back. Check your stance is even with feet just outside shoulder width. Take a deep breath, brace your core and lower under control into a full squat. Think “sitting between your heels”, rather than “sitting back”. Throughout the movement keep your elbows up and in to maintain the “shelf” for the barbell. Once you hit the bottom position, drive back up through the mid-foot until you reach the start.
    </string>
    <string name="bttitle">
        Back Thigh Exercise
    </string>
    <string name="te_title">
        1. Thigh Exercises You Need to Know
    </string>
    <string name="ss_title">
        2. Side Shuffle Switch
    </string>
    <string name="ss_string">
    This fast-paced thigh exercise is easy to add to any leg workout at home. It gets your heart rate up (bonus cardio!) and recruits your inner-thigh muscles to help you quickly switch directions.
    </string>
    <string name="pl_title">
        3. Plyometric Squat
    </string>
    <string name="pl_string">
    Jumping plyometric exercises strengthen every muscle in your legs (including your inner thighs) and torch major calories all at once. (If you have bad knees, try these plyo moves instead.)
    </string>
</resources>