<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".arms">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/armstitle"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#E1D9D9"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/arm1"/>

        <TextView
            android:id="@+id/ac1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/td"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/td_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/arm2"/>

        <TextView
            android:id="@+id/td1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/td_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/bc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bc_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/arm3"/>

        <TextView
            android:id="@+id/bc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bc_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/arm4"/>

        <TextView
            android:id="@+id/ps1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/kp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kp_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/arm5"/>

        <TextView
            android:id="@+id/kp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kp_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>
</ScrollView>