<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".bt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/bttitle"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#E1D9D9"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/te_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/bt1"/>

        <TextView
            android:id="@+id/te1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fs_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/ss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ss_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/bt2"/>

        <TextView
            android:id="@+id/ss1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ss_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/bt3"/>

        <TextView
            android:id="@+id/pl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>
</ScrollView>