<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".lb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/lbtitle"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#E1D9D9"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/dl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dl_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/lb1"/>

        <TextView
            android:id="@+id/dl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dl_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/ks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ks_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/lb2"/>

        <TextView
            android:id="@+id/ks1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ks_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/lb3"/>

        <TextView
            android:id="@+id/hp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


    </LinearLayout>
</ScrollView>
