<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".abs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/abstitle"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#E1D9D9"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
        android:id="@+id/dc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dc_title"
        android:fontFamily="@font/aclonica"
        android:layout_margin="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#53504D"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/abs1"/>

        <TextView
            android:id="@+id/dc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dc_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/abs2"/>

        <TextView
            android:id="@+id/tc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/mv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mv_title"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#53504D"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/abs3"/>

        <TextView
            android:id="@+id/mv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dc_string"
            android:fontFamily="@font/aclonica"
            android:layout_margin="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


    </LinearLayout>
</ScrollView>